--- a/batileader/index.html
+++ b/batileader/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from uiparadox.co.uk/public/templates/realtor/v2/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 22 Dec 2024 09:44:36 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Realtor - HTML Real Estate Template">
 
-    <title>Realtor - HTML Template</title>
+    <title>Résidence Elysium - Bati Leader</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
@@ -43,30 +41,30 @@
                             <div class="main-menu__nav">
                                 <ul class="main-menu__list">
                                     <li><a href="index.html" class="active">Home</a></li>
-                                    <li><a href="about.html">About us</a></li>
+                                    <li><a href="#">À Propos de Nous                                    </a></li>
                                     <li class="dropdown">
                                         <a href="javascript:void(0);">Properties</a>
                                         <ul class="sub-menu">
-                                            <li><a href="properties-list.html">Properties list</a></li>
-                                            <li><a href="properties-list-sidebar.html">Properties list(Sidebar)</a></li>
-                                            <li><a href="property-detail.html">Property Detail</a></li>
+                                            <li><a href="#">La Résidence Elysium</a></li>                                        
+                                            <li><a href="#">Les Apartements</a></li>
+                                            <li><a href="#">Les Commodités</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
                                         <a href="javascript:void(0);">Pages</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="blogs.html">Blogs</a></li>
                                             <li><a href="blog-detail.html">Blog Detail</a></li>
                                             <li><a href="team.html">Team</a></li>
                                             <li><a href="404.html">404 Page</a></li>
                                             <li><a href="coming-soon.html">Coming Soon</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li><a href="contact.html">Contact us</a></li>
+                                    <li><a href="#">Contactez Nous</a></li>
                                 </ul>
                             </div>
-                            <a href="contact.html" class="cus-btn sec d-xl-flex d-none">
-                                Contact Us
+                            <a href="#" class="cus-btn sec d-xl-flex d-none">
+                                Contactez Nous
                                 <svg viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M19.8759 7.98103C19.532 7.98103 19.2058 8.05711 18.9122 8.19234C18.6769 7.16583 17.7568 6.3975 16.6599 6.3975C16.3085 6.3975 15.9753 6.47667 15.6767 6.61762C15.4132 5.63128 14.5123 4.90252 13.4439 4.90252C13.123 4.90252 12.8171 4.96842 12.5391 5.0872V2.31113C12.5391 1.03673 11.5024 0 10.228 0C8.95358 0 7.9168 1.03673 7.9168 2.31113V13.3079L6.72515 11.5389L6.70649 11.5157C5.81427 10.4066 4.24457 10.1601 3.0554 10.9425C2.43355 11.3516 2.01229 11.9791 1.86913 12.7095C1.72686 13.4354 1.87738 14.171 2.29293 14.7823L6.54585 21.4861L6.56001 21.5076C7.63194 23.0682 9.40227 24 11.2956 24H16.0677C19.4419 24 22.187 21.2549 22.187 17.8807V10.2921C22.187 9.01777 21.1503 7.98103 19.8759 7.98103ZM20.7808 17.8807C20.7808 20.4795 18.6665 22.5938 16.0677 22.5938H11.2956C9.8698 22.5938 8.53644 21.8941 7.72626 20.7216L3.47394 14.0188L3.45979 13.9974C3.25405 13.6978 3.17929 13.3365 3.24913 12.9799C3.31902 12.6234 3.52471 12.317 3.82827 12.1173C4.40132 11.7403 5.15544 11.8527 5.59377 12.3765L9.32305 17.9123V2.31113C9.32305 1.81214 9.72899 1.40625 10.228 1.40625C10.727 1.40625 11.1328 1.81214 11.1328 2.31113V10.6528H12.5391V7.21369C12.5391 6.7147 12.945 6.30881 13.444 6.30881C13.943 6.30881 14.3488 6.7147 14.3488 7.21369V10.6528H15.7551V8.70862C15.7551 8.20964 16.161 7.80375 16.66 7.80375C17.159 7.80375 17.5648 8.20964 17.5648 8.70862V10.6528H18.9711V10.2922C18.9711 9.79317 19.377 9.38728 19.876 9.38728C20.375 9.38728 20.7808 9.79317 20.7808 10.2922V17.8807H20.7808Z" fill="#212627"/>
                                 </svg>
@@ -87,8 +85,9 @@
             <div class="container-fluid">
                 <div class="content">
                     <div class="text-block">
-                        <p class="eyebrow color-white mb-16 wow fadeInUp">WECOLCOME TO REALTOR</p>
-                        <h1 class="title color-white mb-16 wow fadeInUp"> Our Commitment is that <br>You Find Your Place.</h1>
+                        <p class="eyebrow color-white mb-16 wow fadeInUp">Bienvenue à Bati Leader</p>
+                        <h1 class="title color-white mb-16 wow fadeInUp"> Une entreprise Spécialisée Dans La
+                            Construction, La Gestion, et La Vente de Biens de Qualité.</h1>
                         <p class="color-white mb-32 wow fadeInUp" data-wow-delay="0.5s">Lorem ipsum dolor sit amet consectetur. Accumsan lacus neque nunc<br> convallis eleifend vitae et felis potenti. Sit posuere tempus magna donec<br> vitae gravida suspendisse.</p>
                         <div class="btn-block">
                             <a href="properties-list-sidebar.html" class="cus-btn light wow fadeInUp" data-wow-delay="0.6s">
