--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     </p>
                                 </div>
                                 <a href="properties-list.html" class="cus-btn mb-64 mx-xl-0 mx-auto wow fadeInUp" data-wow-delay="0.6s">
-                                    View Properties
+                                    Contactez Nous
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                                         <g clip-path="url(#clip0_3752_13)">
                                             <path d="M8.0692 6.75527H9.47545V8.16152H8.0692V6.75527Z"/>
@@ -540,12 +540,12 @@
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="img-block image-anime">
                                         <img class="property-img" src="assets/media/properties/property-1.png" alt="">
-                                        <a href="property-detail.html" class="detail-link">View Detail</a>
+                                        <a href="#" class="detail-link">View Detail</a>
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">For Sale</h6>
                                     </div>
                                     <div class="text-block">
-                                        <a href="property-detail.html" class="title h5 mb-8">Urban Oasis Homes</a>
+                                        <a href="#" class="title h5 mb-8">Urban Oasis Homes</a>
                                         <div class="location mb-24">
                                             <img src="assets/media/icons/location.svg" alt="">
                                             <span>101 Serene Avenue, Maplewood Gardens.</span>
@@ -572,12 +572,12 @@
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="1.0s">
                                     <div class="img-block image-anime">
                                         <img class="property-img" src="assets/media/properties/property-2.png" alt="">
-                                        <a href="property-detail.html" class="detail-link">View Detail</a>
+                                        <a href="#" class="detail-link">View Detail</a>
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">For Rent</h6>
                                     </div>
                                     <div class="text-block">
-                                        <a href="property-detail.html" class="title h5 mb-8">Luxurious Living Spaces</a>
+                                        <a href="#" class="title h5 mb-8">Luxurious Living Spaces</a>
                                         <div class="location mb-24">
                                             <img src="assets/media/icons/location.svg" alt="">
                                             <span>101 Serene Avenue, Maplewood Gardens.</span>
@@ -604,12 +604,12 @@
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="1.2s">
                                     <div class="img-block image-anime">
                                         <img class="property-img" src="assets/media/properties/property-3.png" alt="">
-                                        <a href="property-detail.html" class="detail-link">View Detail</a>
+                                        <a href="#" class="detail-link">View Detail</a>
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">For Sale</h6>
                                     </div>
                                     <div class="text-block">
-                                        <a href="property-detail.html" class="title h5 mb-8">Urban Oasis Homes</a>
+                                        <a href="#" class="title h5 mb-8">Urban Oasis Homes</a>
                                         <div class="location mb-24">
                                             <img src="assets/media/icons/location.svg" alt="">
                                             <span>101 Serene Avenue, Maplewood Gardens.</span>
@@ -636,12 +636,12 @@
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="img-block image-anime">
                                         <img class="property-img" src="assets/media/properties/property-4.png" alt="">
-                                        <a href="property-detail.html" class="detail-link">View Detail</a>
+                                        <a href="#" class="detail-link">View Detail</a>
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">For Rent</h6>
                                     </div>
                                     <div class="text-block">
-                                        <a href="property-detail.html" class="title h5 mb-8">Luxurious Living Spaces</a>
+                                        <a href="#" class="title h5 mb-8">Luxurious Living Spaces</a>
                                         <div class="location mb-24">
                                             <img src="assets/media/icons/location.svg" alt="">
                                             <span>101 Serene Avenue, Maplewood Gardens.</span>
