--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </div>
                 <!-- About Section End -->
                 <!-- Services Area Start -->
-                <section class="py-80">
+                <!-- <section class="py-80">
                     <div class="container-fluid">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -497,7 +497,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Services Area End -->
                 <!-- Top-Rated Properties Area Start -->
                 <section class="py-80">
@@ -669,7 +669,7 @@
                 </section>
                 <!-- Top-Rated Properties Area End -->
                 <!-- Property by City Area Start -->
-                <section class="py-80">
+                <!-- <section class="py-80">
                     <div class="container-fluid">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -1015,10 +1015,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Property by City Area End -->
                 <!-- Testimonials Area Start -->
-                <section class="py-80">
+                <!-- <section class="py-80">
                     <div class="container-fluid pe-sm-0">
                         <div class="row align-items-xl-center">
                             <div class="col-xl-4">
@@ -1158,10 +1158,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Testimonials Area End -->
                 <!-- Gallery Area Start -->
-                <section class="py-80 gallery">
+                <!-- <section class="py-80 gallery">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-md-between justify-content-center mb-48">
                             <div class="heading align-items-md-start text-md-start">
@@ -1224,10 +1224,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Gallery Area End -->
                 <!-- Team Area Start -->
-                <section class="py-80 bg-light-gray wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <section class="py-80 bg-light-gray wow fadeInUp" data-wow-delay="0.5s">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-md-between justify-content-center mb-48">
                             <div class="heading align-items-md-start text-md-start">
@@ -1379,10 +1379,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Team Area End -->
                 <!-- Blogs Area Start -->
-                <section class="py-80 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <section class="py-80 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-md-between justify-content-center mb-48">
                             <div class="heading align-items-md-start text-md-start">
@@ -1475,10 +1475,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Blogs Area End -->
                 <!-- Partnerss Area Start -->
-                <section class="pt-40 pb-80 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <section class="pt-40 pb-80 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="partners-slider">
                         <div class="partner-block">
                             <img src="assets/media/partners/partner-1.png" alt="">
@@ -1511,7 +1511,7 @@
                             <img src="assets/media/partners/partner-5.png" alt="">
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Partnerss Area End -->
             </div>
             <!-- Footer Section Start -->
