--- a/index.html
+++ b/index.html
@@ -307,10 +307,9 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
                                 <div class="heading mb-64 text-center">
-                                    <p class="eyebrow justify-content-md-start wow fadeInUp" data-wow-delay="0.4s">Properties</p>
-                                    <h2 class="wow fadeInUp" data-wow-delay="0.6s">Explore Property Types</h2>
-                                    <p class="wow fadeInUp" data-wow-delay="0.8s">Lorem ipsum dolor sit amet consectetur. Convallis nisl eu consequat nisi in
-                                        <br>montes odio amet massa. Adipiscing.
+                                    <p class="eyebrow justify-content-md-start wow fadeInUp" data-wow-delay="0.4s">Exclusive</p>
+                                    <h2 class="wow fadeInUp" data-wow-delay="0.6s">Améliorez votre expérience de vie avec</h2>
+                                    <p class="wow fadeInUp" data-wow-delay="0.8s">Le meilleur est à votre porte..
                                     </p>
                                 </div>
                             </div>
@@ -321,17 +320,17 @@
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-1.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Houses</h6>
-                                    <p>22 Properties</p>
+                                    <h6 class="mb-8">Bien-être et Relaxation</h6>
+                                    <p>Salle de Sport, Hammam + Sauna et Piscine Commune</p>
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
                                 <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="0.6s">
                                     <div class="icon-box">
-                                        <img src="assets/media/icons/icon-property-type-2.svg" alt="">
+                                        <img style="filter: brightness(0) invert(1);" src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Apartments</h6>
-                                    <p>32 Properties</p>
+                                    <h6 class="mb-8">Salle Polyvalente</h6>
+                                    <p>Pour les Occasions</p>
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
@@ -339,8 +338,8 @@
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-3.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Office</h6>
-                                    <p>42 Properties</p>
+                                    <h6 class="mb-8">Appartements Intelligents</h6>
+                                    <p>Chauffage et Climatisation Centralisée</p>
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
@@ -348,8 +347,8 @@
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-4.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Townhome</h6>
-                                    <p>18 Properties</p>
+                                    <h6 class="mb-8">Isolation</h6>
+                                    <p>Phonique et Thermique</p>
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
@@ -357,8 +356,9 @@
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-5.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Bungalow</h6>
-                                    <p>40 Properties</p>
+                                    <h6 class="mb-8">Intérieurs Pratiques et Élégants</h6>
+                                    <p>Cuisines Équipées, Espaces de Rangement et Dressing
+                                        </p>
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
@@ -366,8 +366,25 @@
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
-                                    <h6 class="mb-8">Apartments</h6>
-                                    <p>32 Properties</p>
+                                    <h6 class="mb-8">Fenêtres Double Vitrage</h6>
+                                    
+                                </a>
+                            </div>
+                            <div class="col-xl-2 col-md-4 col-6">
+                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
+                                    <div class="icon-box">
+                                        <img src="assets/media/icons/icon-property-type-2.svg" alt="">
+                                    </div>
+                                    <h6 class="mb-8">Installation TV</h6>
+                                    <p>Collective + Fibre Optique</p>
+                                </a>
+                            </div>
+                            <div class="col-xl-2 col-md-4 col-6">
+                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
+                                    <div class="icon-box">
+                                        <img src="assets/media/icons/icon-property-type-2.svg" alt="">
+                                    </div>
+                                    <h6 class="mb-8">Piscines Privatives</h6>                                    
                                 </a>
                             </div>
                         </div>
