--- a/index.html
+++ b/index.html
@@ -700,23 +700,23 @@
                                             <!-- Section Title Start -->
                                             <div class="newsletter-title">
                                                 <h3 class="mb-8 color-primary">Subscribe Our Newsletter</h3>
-                                                <p>Duis pulvinar metus elit, ut aliquam est sollicitudin finibus.</p>
+                                                <p>Découvrez nos propriétés d'exception: appartements, villas et duplex alliant confort et design. Trouvez votre futur chez-vous !</p>
                                             </div>
                                             <!-- Section Title End -->
                                         </div>
                                         <div class="col-lg-6">
                                             <!-- Newsletter Form Start -->
-                                            <form action="https://uiparadox.co.uk/public/templates/realtor/v2/index.html">
+                                            <form action="#">
                                                 <div class="newsletter-field">
                                                     <input
                                                         type="email"
                                                         name="newsletter"
                                                         id="newsletter"
-                                                        placeholder="Your Email"
+                                                        placeholder="Votre Email"
                                                         required
                                                     >
                                                     <button>
-                                                        Subscribe
+                                                        Abonne
                                                         <svg
                                                             xmlns="http://www.w3.org/2000/svg"
                                                             width="24"
@@ -755,7 +755,8 @@
                                     <!-- Footer Logo End -->
                                     <!-- Footer About Content Start -->
                                     <div class="footer-about-content mb-32">
-                                        <p class="color-white">Duis pulvinar metus elit, ut aliquam est sollicitudin finibus. Integer lobortis est interdum.</p>
+                                        <p class="color-white">Spécialistes en construction, gestion et vente de biens de qualité, nous mettons nos clients au cœur de chaque projet, des villas de Annaba aux appartements de luxe d'Alger. Vous êtes notre priorité.
+                                        </p>
                                     </div>
                                     <!-- Footer About Content End -->
                                     <!-- Footer Social Link Start -->
@@ -770,17 +771,7 @@
                                                 <a href="#">
                                                     <i class="fa-brands fa-instagram"></i>
                                                 </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa-brands fa-pinterest"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa-brands fa-linkedin-in"></i>
-                                                </a>
-                                            </li>
+                                            </li>                                            
                                         </ul>
                                     </div>
                                     <!-- Footer Social Link End -->
@@ -797,19 +788,25 @@
                                             <div class="icon-box">
                                                 <img src="assets/media/icons/icon-location.svg" alt="">
                                             </div>
-                                            <p>123, Lorem Ipsum, Street no, Cityname, Country 123456</p>
+                                            <p>Chéraga, Alger</p>
                                         </div>
                                         <div class="footer-info-box">
                                             <div class="icon-box">
                                                 <img src="assets/media/icons/icon-phone.svg" alt="">
                                             </div>
-                                            <p>+0 12345 67890</p>
+                                            <p>0670 41 85 16</p>
                                         </div>
                                         <div class="footer-info-box">
                                             <div class="icon-box">
                                                 <img src="assets/media/icons/icon-email.svg" alt="">
                                             </div>
-                                            <p>info@domainname.com</p>
+                                            <p>h.bati.leader.immo@outlook.com</p>
+                                        </div>
+                                        <div class="footer-info-box">
+                                            <div class="icon-box">
+                                                <img src="assets/media/icons/icon-email.svg" alt="">
+                                            </div>
+                                            <p>Instagram: @bati_leader_promotion</p>
                                         </div>
                                     </div>
                                     <!-- Footer Contact Info Box End -->
@@ -843,11 +840,11 @@
                             <div class="col-lg-3">
                                 <!-- Footer Quick Link Starts -->
                                 <div class="footer-appointment">
-                                    <h4 class="mb-32 color-white">Appointment</h4>
+                                    <h4 class="mb-32 color-white">Contactez Vous</h4>
                                     <div class="footer-appointment-content">
-                                        <p class="mb-32 color-white">Duis pulvinar metus elit, ut aliquam est sollicitudin finibus. Integer lobortis est interdum.</p>
+                                        <p class="mb-32 color-white">Pour toute information ou demande, nos équipes sont à votre écoute par téléphone, WhatsApp, Viber ou email. Ensemble, réalisons votre projet immobilier.</p>
                                         <a href="contact.html" class="cus-btn sec">
-                                            Book Appointment
+                                            Contactez Nous
                                         </a>
                                     </div>
                                 </div>
@@ -866,7 +863,7 @@
                         <div class="col-md-6">
                             <!-- Footer Copyright Content Start -->
                             <div class="footer-copyright text-md-start text-center">
-                                <p>Copyright © 2024 Realtor. All rights reserved.</p>
+                                <p>Copyright © 2024 Mr. C | All rights reserved.</p>
                             </div>
                             <!-- Footer Copyright Content End -->
                         </div>
@@ -903,11 +900,11 @@
                 <ul class="mobile-nav__contact list-unstyled">
                     <li>
                         <i class="fas fa-envelope"></i>
-                        <a href="mailto:example@company.com">example@company.com</a>
+                        <a href="mailto:example@company.com">h.bati.leader.immo@outlook.com</a>
                     </li>
                     <li>
                         <i class="fa fa-phone-alt"></i>
-                        <a href="tel:+12345678">+123 (4567) -890</a>
+                        <a href="tel:+12345678">0670 41 85 16</a>
                     </li>
                 </ul>
             </div>
@@ -935,5 +932,4 @@
         <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/app.js"></script>
     </body>
-    <!-- Mirrored from uiparadox.co.uk/public/templates/realtor/v2/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 22 Dec 2024 09:45:05 GMT -->
 </html>
