updated images coms

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                         <!-- Slider Item -->
                                         <div class="property-card">
                                             <div class="img-block image-anime">
-                                                <img class="property-img" src="assets/media/sej.png" alt="">
+                                                <img class="property-img" src="assets/media/ss.png" alt="">
                                                 <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                                 <h6 class="category-title">Elysium</h6>
                                             </div>
@@ -236,7 +236,7 @@
                                         <!-- Slider Item -->
                                         <div class="property-card">
                                             <div class="img-block image-anime">
-                                                <img class="property-img" src="assets/media/properties/ce.png" alt="">
+                                                <img class="property-img" src="assets/media/ce.png" alt="">
                                                 <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                                 <h6 class="category-title">Elysium</h6>
                                             </div>
@@ -248,7 +248,7 @@
                                         <!-- Slider Item -->
                                         <div class="property-card">
                                             <div class="img-block image-anime">
-                                                <img class="property-img" src="assets/media/properties/rsh.png" alt="">
+                                                <img class="property-img" src="assets/media/rh.png" alt="">
                                                 <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                                 <h6 class="category-title">Elysium</h6>
                                             </div>
@@ -260,7 +260,7 @@
                                         <!-- Slider Item -->
                                         <div class="property-card">
                                             <div class="img-block image-anime">
-                                                <img class="property-img" src="assets/media/properties/esp.png" alt="">
+                                                <img class="property-img" src="assets/media/esp.png" alt="">
                                                 <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                                 <h6 class="category-title">Elysium</h6>
                                             </div>
@@ -430,13 +430,13 @@
                                                 <div class="icon-box">
                                                     <img src="assets/media/icons/icon-about-4.svg" alt="">
                                                 </div>
-                                                <span>Aire De Jeux Et Espace De Détente</span>
+                                                <span>Jeux & Espace De Détente</span>
                                             </li>
                                             <li class="wow fadeInUp" data-wow-delay="1.1s">
                                                 <div class="icon-box">
                                                     <img src="assets/media/icons/icon-about-4.svg" alt="">
                                                 </div>
-                                                <span>Crèche Et Garderie Pour Enfants                                                </span>
+                                                <span>Crèche & Garderie Enfants                                                </span>
                                             </li>
                                             <li class="wow fadeInUp" data-wow-delay="1.1s">
                                                 <div class="icon-box">
