--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                             <div class="col-xxl-3 col-lg-4 col-sm-6">
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="img-block image-anime">
-                                        <img class="property-img" src="assets/media/properties/property-1.png" alt="">
+                                        <img class="property-img" src="assets/media/f3.png" alt="">
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">F3</h6>
                                     </div>
@@ -619,7 +619,7 @@
                             <div class="col-xxl-3 col-lg-4 col-sm-6">
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="img-block image-anime">
-                                        <img class="property-img" src="assets/media/properties/property-1.png" alt="">
+                                        <img class="property-img" src="assets/media/f4.png" alt="">
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">F4</h6>
                                     </div>
@@ -644,7 +644,7 @@
                             <div class="col-xxl-3 col-lg-4 col-sm-6">
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="img-block image-anime">
-                                        <img class="property-img" src="assets/media/properties/property-1.png" alt="">
+                                        <img class="property-img" src="assets/media/f5.png" alt="">
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">F5</h6>
                                     </div>
@@ -669,7 +669,7 @@
                             <div class="col-xxl-3 col-lg-4 col-sm-6">
                                 <div class="property-card shadow wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="img-block image-anime">
-                                        <img class="property-img" src="assets/media/properties/property-1.png" alt="">
+                                        <img class="property-img" src="assets/media/last.png" alt="">
                                         <img class="category-title-bg" src="assets/media/shapes/card-tag-bg.png" alt="">
                                         <h6 class="category-title">Duplex</h6>
                                     </div>
