--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                 </p>
                             </div>
                             <a href="properties-list.html" class="cus-btn d-md-flex d-none">
-                                Contactez Nous
+                                Contactez
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                                     <g clip-path="url(#clip0_3752_13)">
                                         <path d="M8.0692 6.75527H9.47545V8.16152H8.0692V6.75527Z"/>
