--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <div class="main-menu__left">
                                 <div class="main-menu__logo">
                                     <a href="index.html" class="logo">
-                                        <img src="assets/media/logo.png" alt="Realtor">
+                                        <img src="assets/media/logoBL.png" alt="Bati Leader">
                                     </a>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                                 <div class="main-menu__nav">
                                     <ul class="main-menu__list">
                                         <li>
-                                            <a href="index.html" class="active">Home</a>
+                                            <a href="#" class="active">Home</a>
                                         </li>
                                         <li>
                                             <a href="#">À Propos de Nous</a>
@@ -468,7 +468,7 @@
                                                 <div class="icon-box">
                                                     <img src="assets/media/icons/icon-about-4.svg" alt="">
                                                 </div>
-                                                <span>Dispositif Et Réseau Anti-Incendie
+                                                <span>Réseau Anti-Incendie
                                                 </span>
                                             </li>
                                         </ul>
