--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="main-menu__block">
                             <div class="main-menu__left">
                                 <div class="main-menu__logo">
-                                    <a href="index.html" class="logo">
+                                    <a href="#" class="logo">
                                         <img src="assets/media/logoBL.png" alt="Bati Leader">
                                     </a>
                                 </div>
@@ -133,7 +133,7 @@
                                         Chaque détail a été conçu pour vous offrir une expérience de bonheur au quotidien.
                                     </p>
                                 </div>
-                                <a href="properties-list.html" class="cus-btn mb-64 mx-xl-0 mx-auto wow fadeInUp" data-wow-delay="0.6s">
+                                <a href="#" class="cus-btn mb-64 mx-xl-0 mx-auto wow fadeInUp" data-wow-delay="0.6s">
                                     Contactez Nous
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                                         <g clip-path="url(#clip0_3752_13)">
@@ -316,7 +316,7 @@
                         </div>
                         <div class="row justify-content-center row-gap-4">
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="0.4s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="0.4s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-1.svg" alt="">
                                     </div>
@@ -325,7 +325,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="0.6s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="0.6s">
                                     <div class="icon-box">
                                         <img style="filter: brightness(0) invert(1);" src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
@@ -334,7 +334,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="0.8s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-3.svg" alt="">
                                     </div>
@@ -343,7 +343,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.0s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="1.0s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-4.svg" alt="">
                                     </div>
@@ -352,7 +352,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.2s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="1.2s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-5.svg" alt="">
                                     </div>
@@ -362,7 +362,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
@@ -371,7 +371,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
@@ -380,7 +380,7 @@
                                 </a>
                             </div>
                             <div class="col-xl-2 col-md-4 col-6">
-                                <a href="properties-list.html" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
+                                <a href="#" class="property-type-item wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="icon-box">
                                         <img src="assets/media/icons/icon-property-type-2.svg" alt="">
                                     </div>
@@ -524,7 +524,7 @@
                             </div>
                             <div class="col-xl-8 col-lg-9 col-md-10">
                                 <div class="service-block wow fadeInUp" data-wow-delay="0.8s">
-                                    <a href="properties-list.html" class="title h3">
+                                    <a href="#" class="title h3">
                                         1. Property Listing
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="none">
                                             <path d="M29.0317 34.5C29.0317 30 33.2317 24 38.0317 24M38.0317 24C35.2817 24 29.0317 22.5 29.0317 13.5M38.0317 24H9.53174" stroke-width="3"/>
@@ -533,7 +533,7 @@
                                     <img class="service-img" src="assets/media/services/service-1.png" alt="">
                                 </div>
                                 <div class="service-block wow fadeInUp" data-wow-delay="1.15s">
-                                    <a href="properties-list.html" class="title h3">
+                                    <a href="#" class="title h3">
                                         2. Rental Property
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="none">
                                             <path d="M29.0317 34.5C29.0317 30 33.2317 24 38.0317 24M38.0317 24C35.2817 24 29.0317 22.5 29.0317 13.5M38.0317 24H9.53174" stroke-width="3"/>
@@ -542,7 +542,7 @@
                                     <img class="service-img" src="assets/media/services/service-2.png" alt="">
                                 </div>
                                 <div class="service-block wow fadeInUp" data-wow-delay="1.4s">
-                                    <a href="properties-list.html" class="title h3">
+                                    <a href="#" class="title h3">
                                         3. Property Management
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="none">
                                             <path d="M29.0317 34.5C29.0317 30 33.2317 24 38.0317 24M38.0317 24C35.2817 24 29.0317 22.5 29.0317 13.5M38.0317 24H9.53174" stroke-width="3"/>
@@ -565,7 +565,7 @@
                                 <p class="wow fadeInUp" data-wow-delay="0.7s">Un espace pour chaque style de vie : Résidence Elysium propose une variété d’appartements, du F3 pratique et confortable aux F4 modernes et spacieux, jusqu’aux F5 généreux et duplex d’exception. Chaque logement allie design, confort et qualité pour répondre à vos besoins et envies.
                                 </p>
                             </div>
-                            <a href="properties-list.html" class="cus-btn d-md-flex d-none">
+                            <a href="#" class="cus-btn d-md-flex d-none">
                                 Contactez
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                                     <g clip-path="url(#clip0_3752_13)">
@@ -819,19 +819,19 @@
                                     <h4 class="mb-32 color-white">Quick Links</h4>
                                     <ul class="unstyled">
                                         <li>
-                                            <a href="index.html">Home</a>
+                                            <a href="#">Home</a>
                                         </li>
                                         <li>
-                                            <a href="properties-list.html">Listing</a>
+                                            <a href="#">Listing</a>
                                         </li>
                                         <li>
-                                            <a href="about.html">About Us</a>
+                                            <a href="#">About Us</a>
                                         </li>
                                         <li>
-                                            <a href="blogs.html">Blog</a>
+                                            <a href="#">Blog</a>
                                         </li>
                                         <li>
-                                            <a href="contact.html">Contact Us</a>
+                                            <a href="#">Contact Us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -843,7 +843,7 @@
                                     <h4 class="mb-32 color-white">Contactez Vous</h4>
                                     <div class="footer-appointment-content">
                                         <p class="mb-32 color-white">Pour toute information ou demande, nos équipes sont à votre écoute par téléphone, WhatsApp, Viber ou email. Ensemble, réalisons votre projet immobilier.</p>
-                                        <a href="contact.html" class="cus-btn sec">
+                                        <a href="#" class="cus-btn sec">
                                             Contactez Nous
                                         </a>
                                     </div>
@@ -892,7 +892,7 @@
             <div class="mobile-nav__content">
                 <span class="mobile-nav__close mobile-nav__toggler"></span>
                 <div class="logo-box">
-                    <a href="index.html" aria-label="logo image">
+                    <a href="#" aria-label="logo image">
                         <img src="assets/media/logo.png" alt="" class="invisible">
                     </a>
                 </div>
