--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                                         <div class="col-lg-6">
                                             <!-- Section Title Start -->
                                             <div class="newsletter-title">
-                                                <h3 class="mb-8 color-primary">Subscribe Our Newsletter</h3>
+                                                <h3 class="mb-8 color-primary">Subscribe To Our Newsletter</h3>
                                                 <p>Découvrez nos propriétés d'exception: appartements, villas et duplex alliant confort et design. Trouvez votre futur chez-vous !</p>
                                             </div>
                                             <!-- Section Title End -->
