--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Realtor - HTML Real Estate Template">
+        <meta name="description" content="Residence Elysium - Bati Leader Alger">
         <title>Résidence Elysium - Bati Leader</title>
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
