--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                 <span class="mobile-nav__close mobile-nav__toggler"></span>
                 <div class="logo-box">
                     <a href="#" aria-label="logo image">
-                        <img src="assets/media/logo.png" alt="" class="invisible">
+                        <img src="assets/media/logoBL.png" alt="" class="invisible">
                     </a>
                 </div>
                 <div class="mobile-nav__container"></div>
