update logo light

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                                 <div class="footer-about">
                                     <!-- Footer Logo Start -->
                                     <div class="footer-logo mb-32">
-                                        <img src="assets/media/logo-light.png" alt="">
+                                        <img src="assets/media/logoBL.png" alt="">
                                     </div>
                                     <!-- Footer Logo End -->
                                     <!-- Footer About Content Start -->
